--- a/angularjs/createService5Ways.html
+++ b/angularjs/createService5Ways.html
@@ -7,7 +7,7 @@
     </title>
     <!--
         factory()
-        aervice()
+        service()
         constant()
         value()
         provider() 如果希望在config()函数中可以对服务进行配置，必须用provider()来定义服务
